unlocked/Nebula Logger - Unlocked Package/main/default/objects/LoggerSObjectHandler__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>Controls if the SObject&apos;s trigger handler class should execute. This is useful for temporary disabling the logger&apos;s trigger handlers, but should typically be enabled.</description>
    <inlineHelpText>Controls if the SObject&apos;s trigger handler class should execute. This is useful for temporary disabling the logger&apos;s trigger handlers, but should typically be enabled.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>