unlocked/Nebula Logger - Unlocked Package/main/default/objects/LoggerSObjectHandler__mdt/fields/SObjectTypeOverride__c.field-meta.xml
<CustomField>
    <fullName>SObjectTypeOverride__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Not all base platform types can be selected using the SObjectType picklist. If your object is not supported, supply the API name for the object here instead.</description>
    <inlineHelpText>Not all base platform types can be selected using the SObjectType picklist. If your object is not supported, supply the API name for the object here instead.</inlineHelpText>
    <label>SObjectType Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>